page and element alignment fixed

--- a/css/time.css
+++ b/css/time.css
@@ -10,7 +10,7 @@
 
 .ana_clock{
     position: absolute;
-    top: 5%;
+    top: 30%;
     left: 50%;
     transform: translate(-50%,0);
     width: 300px;
@@ -160,19 +160,4 @@
     letter-spacing: 2px;
     margin-top: 3px;
     text-shadow: 1px 2px hsla(0, 0%, 0%, 0.5);
-}
-
-button{
-    background-color: transparent;
-    border: 2px solid red;
-    outline: none;
-    height: 50px;
-    width: 100%;
-    font-size: 2rem;
-    transition: all 300ms ease-in-out;
-    cursor: pointer;
-}
-
-button:hover{
-    background-color: var(--light);
 }
