--- a/css/weather.css
+++ b/css/weather.css
@@ -30,25 +30,32 @@ body{
     background-repeat: no-repeat;
 }
 
-.content{
-    min-height: 100vh;
-    background-image: linear-gradient(to bottom, var(--black-03), var(--black-06));
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
 .wa-container{
+    min-height: 100vh;
     display: flex;
     flex-direction: column;
+    align-items: center;
+    background-image: linear-gradient(to bottom, var(--black-03), var(--black-06));
 }
 
+button{
+    background-color: transparent;
+    outline: none;
+    border: none;
+    height: 50px;
+    width: 100%;
+    transition: all 300ms ease-in-out;
+    cursor: pointer;
+}
 
+button:hover{
+    background-color: var(--light);
+}
 
 .wa-header{
     display: flex;
     justify-content: center;
-    align-items: center;
+    margin-top: 100px;
 }
 
 .wa-header input{
